# fakeSchool

./: README.md  __init__.py  functions.py  info.txt  new.py  newFile.csv  pyproject.toml  randNames.csv  randomFile.py  student.py  test.py  test3.py  testCsv.py  test_fake_data_classes.py  timeline.txt
3.10/: pyvenv.cfg
Institutions/: Cochise College Academic Transcipt.html
Institutions/Cochise College Academic Transcipt_files/: web_defaultapp.css  web_defaultprint.css
csv_module/: csv_functions.py
randomGen/: newClass.csv  newFile.py  randAdmin.py  random.csv  randomAdmin.csv  randomStudData.csv  updatedDER.csv
testing/: test.txt  test_csv_module.py  test_functions.py  test_student.py
timeline/: info.txt  structure.txt  timeline.txt
timeline/randomGen/: randInfo.py  randomFile.py  scrapt.py
